Agrega tema inherit a herencia-cascada.css

--- a/1.- Introduccion a CSS/herencia-cascada.css
+++ b/1.- Introduccion a CSS/herencia-cascada.css
@@ -15,6 +15,20 @@ p{
 }
 
 /*
+    El valor inherit fuerza a un elemento a heredar la propiedad correspondiente de su ancesto
+    mas cercano
+*/
+
+li{
+    color: red;
+}
+
+a{
+    color: inherit;
+}
+
+/*
+
     CASCADA
 
     La cascada viene del nombre de CSS (Cascade Style Sheet) y significa que los estilos
